fix(modal): fix modal height too high issue
affects: @gio-design/components

--- a/packages/components/src/components/modal/style/modal.less
+++ b/packages/components/src/components/modal/style/modal.less
@@ -11,7 +11,7 @@
     bottom: 0;
     left: 0;
     z-index: 1050;
-    overflow: hidden;
+    overflow: auto;
     outline: 0;
     -webkit-overflow-scrolling: touch;
   }
